infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: datguyzaid/client:latest
          ports:
            - containerPort: 4004
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 4004
      targetPort: 4004
  type: ClusterIP
