infra/k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: datguyzaid/comments:latest
          ports:
            - containerPort: 4001
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
