infra/k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: datguyzaid/posts:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
